Added ESLint with Airbnb configuration

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "swagger-ui-express": "^4.1.1"
   },
   "devDependencies": {
+    "eslint": "^6.5.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2"
   }
